<resources>

    <string name="app_name">MoodDiary</string>
    <string name="delete_all">Delete All</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="rate_your_happiness">Rate your happiness today</string>
    <string name="are_you_sure">Do you want to rate the today twice? </string>
    <string name="apply">Apply</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="by_mood">by mood</string>
    <string name="delete_note">Delete note</string>
    <string name="reset_filter">Reset</string>
    <string name="filter_tv">Show notes with mood</string>
    <string name="less_than">less than</string>
    <string name="more_than">more than</string>

    <string-array name="numbers">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>

    </string-array>

</resources>