<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.yurakolesnikov.mooddiary.ui.ConfirmationFragment" />

        <variable
            name="vm"
            type="com.yurakolesnikov.mooddiary.ui.mainActivity.MainActivityViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_fragment_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_areYouSure"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/are_you_sure"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_main"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/yes_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/gray"
            android:onClick="@{() -> fragment.onYesPressed()}"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/yes"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/checkBox"
            app:layout_constraintStart_toEndOf="@id/no_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_areYouSure"
            android:layout_marginEnd="20dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/no_button"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/icon"
            android:layout_marginStart="20dp"
            android:onClick="@{() -> fragment.onNoPressed()}"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/no"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/yes_button"
            app:layout_constraintEnd_toStartOf="@id/yes_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/yes_button" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/fab"
            android:onClick="@{() -> vm.setChecked(true)}"
            android:text="Do not ask again"
            android:textColor="@color/fab"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yes_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>